Fixed card spacing, had overlaping css properties

--- a/guitar-site/src/app/app.component.css
+++ b/guitar-site/src/app/app.component.css
@@ -36,9 +36,11 @@
     height: 1px;
 }
 
-.card-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px; /* Adjust as needed */
+/* .cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 16px;
     justify-content: center;
-}
+    width: 100%;
+    padding: 0 16px;
+} */
